Finish recipe page style, fix footer bug
Earlier main element's height was set to min-height for desktop
and max-height for mobile, which caused overflow and layout issue.
So it was fixed.

Recipe page style is finished. It is responsive.

--- a/style.css
+++ b/style.css
@@ -5,14 +5,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Inria Serif", serif;
-}
-
-html {
-  height: 100%;
-}
-
-body {
-  min-height: 100%;
+  line-height: 1.5em;
 }
 
 header {
@@ -30,15 +23,12 @@ main {
   display: flex;
   flex-direction: column;
   padding: 16px 64px;
+  min-height: 80vh;
 }
 
 header,
 footer {
   max-height: 10vh;
-}
-
-main {
-  max-height: 80vh;
 }
 
 .col {
@@ -104,11 +94,8 @@ footer {
   border: 1px solid black;
   text-align: center;
   padding: 32px 16px;
-  position: fixed;
   background: white;
   width: 100%;
-  bottom: 0;
-  left: 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -190,6 +177,25 @@ h2 {
   margin-bottom: 8px;
 }
 
+ul ul,
+ol ol {
+  margin-left: 16px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 /* Animation */
 
 @keyframes reveal {
@@ -206,8 +212,20 @@ h2 {
   main {
     flex-direction: row-reverse;
     position: relative;
-    min-height: 80vh;
+    max-height: 80vh;
     gap: 16px;
+  }
+
+  .last.recipe-page.dev-box {
+    margin-bottom: 0;
+  }
+
+  main.recipe-page {
+    flex-direction: row;
+  }
+
+  .scrollable {
+    overflow-y: scroll;
   }
 
   .mid {
